motion projects desktop media query added to content div css

--- a/routes/motion projects/_motionProjects.css
+++ b/routes/motion projects/_motionProjects.css
@@ -280,3 +280,209 @@
     border-radius: 18px;
   }
 }
+
+/* --------------------------------------------------------------------- Desktop media query -----------------------------------------------------------------------*/
+
+@media (min-width: 1181px) {
+  .motion-projects-root {
+    width: 80%;
+    height: min-content;
+    margin: 0 auto;
+  }
+
+  .motion-projects-content {
+    height: 100%;
+    width: 100%;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .motion-projects-content img {
+    height: 100%;
+    width: 40%;
+    object-fit: contain;
+    animation: scale-opacity-in 0.7s cubic-bezier(0.5, 0.27, 0.45, 0.87);
+    transition: all 0.4s cubic-bezier(0.5, 0.27, 0.45, 0.87);
+  }
+
+  .motion-projects-content img:hover {
+    transform: rotate(10deg) scale(1.1);
+  }
+
+  .motion-projects-copy {
+    width: 50%;
+    padding-top: 0%;
+    gap: 30px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .motion-projects-copy h2 {
+    font-size: 46px;
+    text-align: left;
+    font-weight: 700;
+    animation: opacity-translation-Y-in 0.7s cubic-bezier(0.48, 0.23, 0.61, 0.93);
+  }
+  .motion-projects-copy p {
+    font-size: 20px;
+    font-weight: normal;
+    text-align: justify;
+    animation: opacity-translation-Y-in 0.8s cubic-bezier(0.48, 0.23, 0.61, 0.93);
+  }
+
+  .motion-projects-CTA {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    gap: 20px;
+    margin-top: 5%;
+    animation: opacity-in 0.4s cubic-bezier(0.48, 0.23, 0.61, 0.93);
+    animation-delay: 1s;
+    animation-fill-mode: backwards;
+  }
+
+  .motion-projects-display-projects-cards {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 20%;
+  }
+
+  .motion-projects-display-card {
+    width: 100%;
+    padding: 20px;
+    gap: 20px;
+    line-height: 20px;
+    height: fit-content;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .motion-projects-display-card h2 {
+    font-size: 26px;
+    text-align: center;
+    font-weight: 700;
+    width: 100%;
+    padding: 10px 0;
+    text-decoration: underline;
+  }
+
+  .motion-projects-display-card h3 {
+    font-size: 20px;
+    text-align: left;
+    font-weight: 700;
+    width: 100%;
+    padding-left: 20px;
+  }
+
+  .motion-projects-display-card p {
+    text-align: justify;
+    font-size: 16px;
+    width: 100%;
+  }
+
+  .motion-projects-display-card ul {
+    text-align: left;
+    width: 100%;
+    padding-left: 20px;
+    box-sizing: border-box;
+  }
+
+  .motion-projects-display-card video {
+    width: 100%;
+    object-fit: contain;
+  }
+
+  .motion-projects-display-card img {
+    width: 100%;
+    object-fit: contain;
+  }
+
+  .motion-projects-display-cards-CTA {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px 0;
+    gap: 10px;
+  }
+
+  .motion-projects-card-asset-loader {
+    width: 100%;
+    height: 150px;
+    border: 3px dotted var(--mainColor);
+    color: var(--mainColor);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  /* -------------------- Projects card styles for img FullScreen open ---------------*/
+
+  .motion-projects-full-screen-asset-open {
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0px;
+    z-index: 1000;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .motion-projects-full-screen-asset-open:hover {
+    cursor: pointer;
+  }
+
+  .motion-projects-full-screen-asset-open .motion-projects-full-screen-asset-button {
+    z-index: 1;
+    top: 30%;
+    right: 0;
+    position: absolute;
+  }
+
+  .motion-projects-full-screen-asset-open .motion-projects-display-card-asset {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    position: absolute;
+    object-fit: contain;
+  }
+
+  .motion-projects-full-screen-asset-open .motion-projects-full-screen-bg {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    position: absolute;
+    background-color: black;
+  }
+
+  /* ------- full screen img FullScreen closed  ------ */
+
+  .motion-projects-full-screen-asset-close {
+    display: default;
+  }
+  .motion-projects-full-screen-asset-close:hover {
+    cursor: pointer;
+  }
+  .motion-projects-full-screen-asset-close .motion-projects-full-screen-asset-button {
+    display: none;
+  }
+  .motion-projects-full-screen-asset-close .motion-projects-display-card-asset {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 12px;
+  }
+  .motion-projects-full-screen-asset-close .motion-projects-full-screen-bg {
+    display: none;
+  }
+}
