--- a/routes/AboutMe/_aboutMe.css
+++ b/routes/AboutMe/_aboutMe.css
@@ -186,14 +186,17 @@
   .aboutMe-content {
     height: 100%;
     width: 100%;
-    margin-top: 20%;
-    margin-bottom: 20%;
+    margin-top: 10%;
+    margin-bottom: 10%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-around;
   }
 
   .aboutMe-content img {
-    height: 250px;
+    height: 100%;
+    width: 40%;
     object-fit: contain;
     animation: scale-opacity-in 0.7s cubic-bezier(0.5, 0.27, 0.45, 0.87);
     transition: all 0.4s cubic-bezier(0.5, 0.27, 0.45, 0.87);
@@ -204,30 +207,35 @@
   }
 
   .aboutMe-copy {
-    width: 100%;
-    padding-top: 20%;
-    gap: 20px;
+    width: 50%;
+    padding-top: 0%;
+    gap: 30px;
     display: flex;
+    justify-content: center;
     flex-direction: column;
   }
 
   .aboutMe-copy h2 {
-    font-size: 26px;
+    font-size: 46px;
     text-align: left;
     font-weight: 700;
     animation: opacity-translation-Y-in 0.7s cubic-bezier(0.48, 0.23, 0.61, 0.93);
   }
 
   .aboutMe-copy p {
-    font-size: 16px;
+    font-size: 20px;
     font-weight: normal;
     text-align: justify;
     animation: opacity-translation-Y-in 0.8s cubic-bezier(0.48, 0.23, 0.61, 0.93);
   }
 
   .aboutMe-CTA {
-    margin-left: auto;
-    margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    gap: 20px;
+    margin-top: 5%;
     animation: opacity-in 0.4s cubic-bezier(0.48, 0.23, 0.61, 0.93);
     animation-delay: 1s;
     animation-fill-mode: backwards;
