--- a/routes/AboutMe/_aboutMe.css
+++ b/routes/AboutMe/_aboutMe.css
@@ -245,18 +245,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 80%;
     margin: 0 auto;
-    margin-bottom: 20%;
-    gap: 20px;
+    margin-bottom: 10%;
+    gap: 30px;
   }
 
   .aboutme-copy-PFP {
-    height: 150px;
-    width: 150px;
+    height: 250px;
+    width: 250px;
     border-radius: 100%;
     margin-bottom: 10%;
-    border: 5px solid white;
+    border: 7px solid white;
     transition: all 0.2s ease-in-out;
     overflow: hidden;
     display: flex;
@@ -266,34 +266,35 @@
 
   .aboutme-copy-PFP:hover {
     scale: 1.1;
-    border: 5px solid var(--mainColor);
+    border: 7px solid var(--mainColor);
   }
 
   .aboutme-copy-PFP img {
-    height: 350px;
+    height: 500px;
     object-fit: contain;
     position: relative;
-    top: 30%;
+    top: 25%;
   }
 
   .about-me-read-more-content h2 {
-    font-size: 26px;
+    font-size: 46px;
     text-align: center;
     text-decoration: underline;
     font-weight: 700;
     width: 100%;
+    padding: 20px 0;
   }
 
   .about-me-read-more-content p {
     text-align: justify;
-    font-size: 16px;
+    font-size: 20px;
     width: 100%;
   }
 
   .about-me-read-more-content i {
-    font-size: 16px;
+    font-size: 20px;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 30px;
     width: 100%;
   }
 }
