--- a/routes/Projects/_projects.css
+++ b/routes/Projects/_projects.css
@@ -116,14 +116,14 @@
   object-fit: contain;
 }
 
-.projects-typescript-logo {
+.projects-card-logo {
   width: 100%;
   height: 20px;
   display: flex;
   align-items: center;
 }
 
-.projects-typescript-logo img {
+.projects-card-logo img {
   height: 16px;
   width: 16px;
   margin-right: auto;
@@ -271,14 +271,14 @@
     font-size: 20px;
   }
 
-  .projects-typescript-logo {
+  .projects-card-logo {
     width: 100%;
     height: 30px;
     display: flex;
     align-items: center;
   }
 
-  .projects-typescript-logo img {
+  .projects-card-logo img {
     height: 20px;
     width: 20px;
     margin-right: auto;
@@ -436,6 +436,33 @@
   .projects-display-card img {
     width: 100%;
     object-fit: contain;
+  }
+
+  .projects-card-logo {
+    width: 100%;
+    height: min-content;
+    border: 1px dotted white;
+  }
+
+  .projects-card-logo div {
+    height: min-content;
+    width: 100%;
+    display: flex;
+    position: relative;
+    justify-content: flex-start;
+  }
+
+  .projects-card-logo img {
+    width: 20px;
+    height: 20px;
+    object-fit: contain;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .projects-card-logo p {
+    padding-left: 20px;
   }
 
   .projects-display-cards-CTA {
