--- a/routes/Projects/_projects.css
+++ b/routes/Projects/_projects.css
@@ -118,15 +118,28 @@
 
 .projects-card-logo {
   width: 100%;
-  height: 20px;
+  height: min-content;
+  position: relative;
+}
+
+.projects-card-logo div {
+  width: 100%;
+  height: min-content;
   display: flex;
-  align-items: center;
+  justify-content: flex-start;
 }
 
 .projects-card-logo img {
-  height: 16px;
   width: 16px;
-  margin-right: auto;
+  height: 16px;
+  object-fit: contain;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.projects-card-logo p {
+  padding-left: 16px;
 }
 
 .projects-display-cards-CTA {
@@ -273,15 +286,28 @@
 
   .projects-card-logo {
     width: 100%;
-    height: 30px;
+    height: min-content;
+    position: relative;
+  }
+
+  .projects-card-logo div {
+    width: 100%;
+    height: min-content;
     display: flex;
-    align-items: center;
+    justify-content: flex-start;
   }
 
   .projects-card-logo img {
-    height: 20px;
     width: 20px;
-    margin-right: auto;
+    height: 20px;
+    object-fit: contain;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .projects-card-logo p {
+    padding-left: 20px;
   }
 
   .projects-display-cards-CTA {
@@ -441,14 +467,13 @@
   .projects-card-logo {
     width: 100%;
     height: min-content;
-    border: 1px dotted white;
+    position: relative;
   }
 
   .projects-card-logo div {
-    height: min-content;
     width: 100%;
+    height: min-content;
     display: flex;
-    position: relative;
     justify-content: flex-start;
   }
 
