--- a/routes/Projects/_projects.css
+++ b/routes/Projects/_projects.css
@@ -79,6 +79,7 @@
 
 .projects-display-card h2 {
   font-size: 26px;
+  line-height: 30px;
   text-align: center;
   font-weight: 700;
   width: 100%;
@@ -268,6 +269,7 @@
 
   .projects-display-card h2 {
     font-size: 36px;
+    line-height: 34px;
     padding: 20px 0;
   }
 
@@ -427,10 +429,11 @@
 
   .projects-display-card h2 {
     font-size: 46px;
+    line-height: 38px;
     text-align: center;
     font-weight: 700;
     width: 100%;
-    padding: 10px 0;
+    padding: 30px 0;
     text-decoration: underline;
   }
 
