fixed full screen error in web projects page

--- a/routes/webProjects/_webProjects.css
+++ b/routes/webProjects/_webProjects.css
@@ -161,7 +161,7 @@
   align-items: center;
 }
 
-/* --------------------  FullScreen open ---------------*/
+/* -------------------- Handle FullScreen  ---------------*/
 
 .projects-full-screen-asset-open {
   width: 100vw;
