updated contact css for tablet media query - reduce the width of whole page

--- a/routes/Contact/_contact.css
+++ b/routes/Contact/_contact.css
@@ -1,6 +1,5 @@
 .contact-root {
   width: 80%;
-  height: min-content;
   margin: 0 auto;
 }
 
@@ -72,7 +71,7 @@
   flex-direction: column;
 }
 
-.contact-display-card h3 {
+.contact-display-card h4 {
   font-size: 20px;
   text-align: center;
   font-weight: 700;
@@ -118,9 +117,9 @@
 }
 
 .contact-full-screen-close-button button {
-  padding: 20px;
+  padding: 15px;
   min-width: 0;
-  font-size: 40px;
+  font-size: 30px;
 }
 
 .contact-full-screen-bg {
@@ -136,6 +135,10 @@
 /* --------------------------------------------------------------------- Tablet media query -----------------------------------------------------------------------*/
 
 @media (min-width: 601px) {
+  .contact-root {
+    width: 70%;
+  }
+
   .contact-content {
     margin-top: 15%;
     margin-bottom: 15%;
@@ -173,8 +176,8 @@
     line-height: 30px;
   }
 
-  .contact-display-card h3 {
-    font-size: 28px;
+  .contact-display-card h4 {
+    font-size: 24px;
   }
 
   .contact-display-card-CTA {
@@ -183,14 +186,14 @@
 
   /* -------------------- contact card styles for img FullScreen open ---------------*/
 
-  .contact-full-screen-asset-open .contact-full-screen-asset-button {
-    top: 24%;
+  .contact-full-screen-img-close {
+    border-radius: 12px;
   }
 
-  /* ------- full screen img FullScreen closed  ------ */
-
-  .contact-full-screen-asset-close .contact-display-card-asset {
-    border-radius: 16px;
+  .contact-full-screen-close-button button {
+    padding: 20px;
+    min-width: 0;
+    font-size: 40px;
   }
 }
 
