updated whole page css for tablet media query - fixed cards component layout

--- a/routes/Contact/_contact.css
+++ b/routes/Contact/_contact.css
@@ -58,6 +58,7 @@
   flex-direction: column;
   width: 100%;
   margin-bottom: 20%;
+  gap: 10px;
 }
 
 .contact-display-card {
@@ -168,6 +169,7 @@
 
   .contact-options-cards {
     margin-bottom: 15%;
+    gap: 15px;
   }
 
   .contact-display-card {
